--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 
 config/config.php
 
-tmp/*
 vendor/*
-bkp/*
 logs/*
+tmp/*
 
-!bkp/empty
+tmp/cache/*
+tmp/bkp/*
+
+
 !logs/empty
+!tmp/cache/empty
+!tmp/bkp/empty
